Mobile: w2ui scroll elements: - Enable and adjust elements when on mobile so they are visible but discreet (without covering icons) - Make them not clickable when on mobile (thus avoiding unwanted scrolled due to users mistaps - Make their parent aware of the ongoing scrolling and call w2ui resize on it (thus making the left and right indicator showing and hiding as we please) - Test and adjust so this changes do affect affect the click listening on desktop etc
Reviewed-on: https://gerrit.libreoffice.org/c/online/+/86364
Tested-by: Pedro Pinto da Silva <pedro.silva@collabora.com>

--- a/loleaflet/css/toolbar-mobile.css
+++ b/loleaflet/css/toolbar-mobile.css
@@ -36,9 +36,20 @@
 	}
 	#toolbar-down > .w2ui-scroll-wrapper::-webkit-scrollbar { /*webkit only*/
 		display: none;
-}
-	.w2ui-scroll-right,.w2ui-scroll-left{
-		display: none !important;
+	}
+	#toolbar-down .w2ui-scroll-left, #toolbar-down .w2ui-scroll-right{
+		background: linear-gradient(to left, #fff0 50%, #0b87e730 95%, #0a77cc52 100%);
+		height: 100%;
+		top: 0%;
+		box-shadow: none;
+	}
+	#toolbar-down .w2ui-scroll-right{
+		right: 0;
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+		transform: rotate(180deg);
 	}
 	#addressInput{
 		width: 60px !important;
